# My-MCP-Server

./: .gitignore  alembic.ini  database.py  models.py  pyproject.toml  server.py  service.py
Tools/: filesModification.py  google_tools.py  notesTool.py
alembic/: env.py
