[project]
name = "my-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.4",
    "dotenv>=0.9.9",
    "mcp[cli]>=1.13.0",
    "psycopg2>=2.9.10",
    "send2trash>=1.8.3",
    "sqlalchemy>=2.0.43",
]
