[project]
name = "my-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.4",
    "appopener>=1.7",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.183.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "mcp[cli]>=1.13.0",
    "psycopg2>=2.9.10",
    "send2trash>=1.8.3",
    "sqlalchemy>=2.0.43",
]
